cyclonedx-bom/src/specs/v1_6/snapshots/cyclonedx_bom__specs__v1_6__evidence__test__it_should_round_trip_xml_occurrence_details.snap
---
source: cyclonedx-bom/src/specs/v1_6/evidence.rs
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<occurrences>
  <occurrence bom-ref="occurrence-1">
    <location>location-1</location>
    <line>42</line>
    <offset>7</offset>
    <symbol>symbol-1</symbol>
    <additionalContext>context-1</additionalContext>
  </occurrence>
</occurrences>
