cyclonedx-bom/src/specs/v1_6/snapshots/cyclonedx_bom__specs__v1_6__evidence__test__it_should_write_xml_identity.snap
---
source: cyclonedx-bom/src/specs/v1_6/evidence.rs
assertion_line: 1124
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<identity>
  <field>group</field>
  <confidence>0.5</confidence>
  <methods>
    <method>
      <technique>technique-1</technique>
      <confidence>0.8</confidence>
      <value>identity-value</value>
    </method>
  </methods>
  <tools>
    <tool ref="tool-ref-1" />
  </tools>
</identity>
